--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,10 @@ select:-webkit-autofill:hover {
   box-shadow: 0 0 0 1000px var(--bg) inset;
 }
 
+img {
+  pointer-events: none;
+}
+
 button, button:hover {
   outline: 0;
   border: none;
@@ -263,6 +267,8 @@ section {
   opacity: 0.9;
 } */
 
+/* start cursor */
+
 .cursor {
   width: 1px;
   height: 1px;
@@ -274,6 +280,7 @@ section {
   -webkit-transition: width .1s linear, height .1s linear;
   transition: width .1s linear, height .1s linear;
   pointer-events: none;
+  touch-action: none;
 }
 
 .cursor::before {
@@ -322,6 +329,98 @@ section {
   -webkit-transition: width 0.3s linear, height 0.3s linear, background-color 0.1s linear;
   transition: width 0.3s linear, height 0.3s linear, background-color 0.1s linear;
 }
+
+
+
+
+
+
+
+
+
+
+.cursor {
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: 5;
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+  touch-action: none;
+}
+
+.cursor__block {
+  position: relative;
+  display: flex;
+  width: 6.25rem;
+  height: 6.25rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0;
+  transition: height 300ms ease, width 300ms ease, opacity 300ms ease;
+}
+
+.cursor__wrapper {
+  overflow: hidden;
+  height: 1rem;
+}
+
+.cursor__text {
+  transition: transform 300ms ease;
+  font-family: Oswald, sans-serif;
+  font-size: 1rem;
+  line-height: 1;
+  font-weight: 400;
+}
+
+.cursor__left,
+.cursor__right {
+  position: absolute;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0;
+  transition: opacity 300ms ease;
+}
+
+.cursor__left {
+  left: -1rem;
+}
+
+.cursor__right {
+  right: -1rem;
+}
+
+.cursor__block.active .cursor__left,
+.cursor__block.active .cursor__right {
+  opacity: 1;
+}
+
+.cursor__block.show {
+  opacity: 1;
+}
+
+.cursor__block.active {
+  width: 4rem;
+  height: 4rem;
+}
+
+.cursor__block.active .cursor__text {
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+
+/* end cursor */
 
 .main__section {
   position: relative;
@@ -431,6 +530,30 @@ section {
 .swiper-container-3d .swiper-slide-shadow-right,
 .swiper-container-3d .swiper-slide-shadow-top {
   perspective: 1px !important;
+}
+
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  pointer-events: all;
+  opacity: 0.5;
+  cursor: none;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  display: none;
+}
+
+.swiper-button-disabled .btn__arrow:hover .btn__side_default,
+.swiper-button-disabled .active .btn__arrow .btn__side_default {
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+}
+
+.swiper-button-disabled .btn__arrow:hover .btn__side_hover,
+.swiper-button-disabled .active .btn__arrow .btn__side_hover {
+  -webkit-transform: translateY(35px);
+  transform: translateY(35px);
 }
 
 /* start buttons */
@@ -4642,7 +4765,9 @@ html.has-scroll-dragging {
   .compact .progress,
   .articles__prev,
   .articles__next,
-  .swiper-pagination-clickable .swiper-pagination-bullet {
+  .swiper-pagination-clickable .swiper-pagination-bullet,
+  .swiper-button-next.swiper-button-disabled,
+  .swiper-button-prev.swiper-button-disabled {
     cursor: pointer;
   }
   h1 {
