--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,8 @@ section {
   height: 30px;
 }
 
+.leave.cursor.cursor__slider .cursor__block,
+.leave.cursor.cursor__showreel .cursor__block,
 .leave.cursor::before {
   width: 0px;
   height: 0px;
