--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,7 @@ section {
   background-color: var(--purple);
 }
 
+[data-scroll-section],
 .swiper-wrapper,
 .swiper-container-3d .swiper-cube-shadow,
 .swiper-container-3d .swiper-slide,
@@ -549,6 +550,7 @@ section {
   transition-property: transform, -webkit-transform, -moz-transform, -ms-transform, -o-transform;
 }
 
+[data-scroll-section],
 .swiper-container-3d .swiper-cube-shadow,
 .swiper-container-3d .swiper-slide,
 .swiper-container-3d .swiper-slide-shadow-bottom,
@@ -3843,6 +3845,10 @@ html.has-scroll-dragging {
   max-height: 1024px;
 }
 
+.project_top__container {
+  height: 100%;
+}
+
 .project_top__block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3860,6 +3866,8 @@ html.has-scroll-dragging {
   flex-direction: column;
   justify-content: space-between;
   gap: 20px;
+  position: relative;
+  z-index: 1;
 }
 
 .project_top__info_block {
@@ -4010,7 +4018,6 @@ html.has-scroll-dragging {
   width: 100%;
   height: 100%;
   max-width: 1152px;
-  max-height: 642px;
   position: relative;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -4474,14 +4481,13 @@ html.has-scroll-dragging {
     padding: 0 60px;
   }
   .project_desktop__slider {
-    padding: 60px 60px 105px;
+    padding: 60px 60px 110px;
   }
   .project_banner__inview {
     max-height: 520px;
   }
   .project_desktop__img {
     max-width: 820px;
-    max-height: 450px;
   }
   .project_desktop__swiper {
     max-width: 640px;
@@ -4493,9 +4499,6 @@ html.has-scroll-dragging {
     padding: 0;
   }
   .project_top__block {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     padding: 200px 0 80px;
     gap: 60px;
   }
@@ -4759,6 +4762,48 @@ html.has-scroll-dragging {
   .projects__filter_sublist.active {
     padding: 20px;
   }
+  .project_phone_flex {
+    padding: 40px 0;
+    margin: 0 40px;
+  }
+  .project__info {
+    padding: 40px 0;
+  }
+  .project__info_left,
+  .project__info_right {
+    padding: 0 30px;
+  }
+  .project_desktop__slider {
+    padding: 40px 40px 110px;
+  }
+  .project_banner__inview {
+    max-height: 450px;
+  }
+  .project_desktop__img {
+    max-width: 820px;
+  }
+  .project_desktop__swiper {
+    max-width: 640px;
+    max-height: 408px;
+    top: 72px;
+  }
+  .project_top__info {
+    width: calc(40% - 40px);
+  }
+  .project_top__block {
+    padding: 160px 0 60px;
+    gap: 40px;
+  }
+  .project_top__image {
+    height: calc(var(--height) - 220px);
+  }
+  .project_desktop__container {
+    padding: 0;
+  }
+  .project_desktop__slider {
+    border-left: none;
+    border-right: none;
+  }
   .articles__image {
     height: 160px;
   }
@@ -5021,11 +5066,58 @@ html.has-scroll-dragging {
   .projects__all_flex {
     padding: 0 20px 20px;
   }
-  .articles__top {
-    padding: 0 20px 20px;
-  }
   .projects__filter_list {
     gap: 10px;
+  }
+  .project_desktop__container {
+    padding: 0;
+  }
+  .project_phone_flex {
+    margin: 0 20px;
+  }
+  .project__info {
+    flex-direction: column;
+    gap: 40px;
+  }
+  .project__info_left,
+  .project__info_right {
+    width: 100%;
+  }
+  .project_desktop__slider {
+    padding: 40px 20px 70px;
+  }
+  .project_desktop__img {
+    max-width: 540px;
+  }
+  .project_desktop__swiper {
+    max-width: 420px;
+    max-height: 270px;
+    top: 60px;
+    border-radius: 10px 10px 0 0;
+  }
+  .project_top__info {
+    height: 100%;
+    width: 100%;
+  }
+  .project_top__block {
+    height: 100%;
+    flex-direction: column;
+    padding: 110px 0 40px;
+    gap: 20px;
+  }
+  .project_top__image {
+    width: calc(100% - 40px);
+    height: calc(var(--height) - 220px);
+    position: absolute;
+    left: 100px;
+    bottom: 0;
+  }
+  .project_top__image img {
+    object-fit: cover;
+    object-position: top left;
+  }
+  .articles__top {
+    padding: 0 20px 20px;
   }
   .articles__slider {
     padding: 0 20px;
@@ -5187,6 +5279,18 @@ html.has-scroll-dragging {
     align-items: flex-start;
     gap: 20px;
   }
+  .project_banner__inview {
+    max-height: 350px;
+  }
+  .project_desktop__img {
+    max-width: 306px;
+  }
+  .project_desktop__swiper {
+    max-width: 240px;
+    max-height: 156px;
+    top: 50px;
+    border-radius: 5px 5px 0 0;
+  }
   .footer__social {
     width: 100%;
     justify-content: space-between;
@@ -5203,3 +5307,11 @@ html.has-scroll-dragging {
   }
 }
 /* end 390px */
+
+/* start 389px */
+@media (max-width: 389px) {
+  .project_desktop__container {
+    display: none;
+  }
+}
+/* end 389px */
