--- a/css/style.css
+++ b/css/style.css
@@ -691,9 +691,9 @@ section {
 }
 
 .btn__input .button__text {
-  width: 120%;
-  height: 120%;
-  padding: 14.5px 26.5px;
+  width: 100%;
+  height: 100%;
+  padding: 0 26.5px;
   color: var(--text-gray);
   background: transparent;
   border: none;
@@ -1328,10 +1328,12 @@ html.has-scroll-dragging {
 
 .button__briefing {
   width: 184px;
+  padding: 0;
 }
 
 .button__feedback {
   width: 124px;
+  padding: 0;
 }
 
 .header__link,
@@ -2212,8 +2214,8 @@ html.has-scroll-dragging {
 }
 
 .footer__button_up svg {
-  width: 20px;
-  height: 40px;
+  width: 40px;
+  height: 20px;
 }
 
 .footer__list {
@@ -4703,8 +4705,8 @@ html.has-scroll-dragging {
     padding: 0;
   }
   .footer__button_up svg {
-    width: 15px;
-    height: 30px;
+    width: 30px;
+    height: 15px;
   }
 }
 /* end 1440px */
@@ -5404,7 +5406,9 @@ html.has-scroll-dragging {
     height: 40px;
     padding: 0 30px;
   }
-  .button__project {
+  .button__project,
+  .button__briefing,
+  .button__feedback {
     padding: 0;
   }
   .header__nav_container {
