--- a/css/style.css
+++ b/css/style.css
@@ -4591,6 +4591,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 0 20px;
 }
 
 .team_slider__swiper {
